# aruco_marker_location

./: .gitignore  README.md  frames_2023-04-11_07.54.26.gv  frames_2023-04-11_07.55.43.gv
.devcontainer/: Dockerfile  devcontainer.json  docker-compose_template.yaml
aruco_ros/aruco/src/aruco/: cvdrawingutils.cpp
aruco_ros/aruco_msgs/: CMakeLists.txt
aruco_ros/aruco_msgs/msg/: KalmanFilterTestMsg.msg  MarkerAndMac.msg  MarkerAndMacVector.msg  PoseWithId.msg  TestDoubleMarkersError.msg
aruco_ros/aruco_ros/: CMakeLists.txt  package.xml
aruco_ros/aruco_ros/launch/: double.launch.py  single.launch.py  single.launch.py.bak.bak  test_single.launch.py
aruco_ros/aruco_ros/params/: config.yaml
aruco_ros/aruco_ros/src/: simple_double.cpp  simple_single.cpp  simple_single.cpp.bak.bak  simple_single_new.cpp  test_simple_single.cpp
ros2_astra_camera/: .gitignore
ros2_astra_camera/astra_camera/: CMakeLists.txt  package.xml
ros2_astra_camera/astra_camera/include/astra_camera/: ob_camera_node_factory.h
ros2_astra_camera/astra_camera/include/astra_camera/test/: msg_test.hpp  points_person_transform.hpp  thread_manager.hpp
ros2_astra_camera/astra_camera/launch/: dabai_dcw.launch.py  multi_dabai_dcw.back.launch.py  multi_dabai_dcw.launch.py  multi_dabai_dcw.launch.py.bak.bak  serials.txt  single.launch.py
ros2_astra_camera/astra_camera/openni2_redist/x64/: OpenNI.ini
ros2_astra_camera/astra_camera/params/: cyclonedds.xml  dabai_dcw_msg_test.yaml  dabai_dcw_params.yaml  dabai_dcw_test.yaml
ros2_astra_camera/astra_camera/src/: device_listener.cpp  ob_camera_node.cpp  ob_camera_node_factory.cpp  ros_service.cpp  uvc_camera_driver.cpp
ros2_astra_camera/astra_camera/src/point_cloud_proc/: point_cloud_xyz.cpp
ros2_astra_camera/astra_camera/src/test/: msg_test.cpp  points_person_transform.cpp  test.cpp  thread_manager.cpp
ros2_astra_camera/astra_camera_msgs/: CMakeLists.txt
ros2_astra_camera/astra_camera_msgs/msg/: CoordPerson.msg  CoordPersonList.msg
